--- a/assets/scss/blk-design-system/custom/_example-pages.scss
+++ b/assets/scss/blk-design-system/custom/_example-pages.scss
@@ -47,10 +47,10 @@
 
       &.square2{
         animation: move-left-right 6s infinite;
-        height: 400px;
-        width: 400px;
+        height: 300px;
+        width: 300px;
         opacity: 0.4;
-        right: -5%;
+        right: 0;
         top: -12%;
       }
 
